updated code to handle for AWS read and write to AS